# lfx_midi

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  library.h
cmake/: lfx_midi-config.cmake.in
docs/: lfx_midi_UML.mmd
examples/: main.cpp
include/lfx_midi/: ALaunchpad.h  lp_device_info.h
src/: ALaunchpad.cpp
src/core/: lp_discovery.cpp  lp_discovery.h  lp_instance.cpp  lp_instance.h  lp_pipeline.cpp  lp_pipeline.h
src/hardware/: IMidiTransport.h
src/hardware/android/: lp_transport_android.cpp  lp_transport_android.h
src/hardware/windows/: lp_transport_win.cpp  lp_transport_win.h
src/memory/: lp_arena.h  lp_led.h  lp_triple_buffer.cpp  lp_triple_buffer.h
src/tests/: test_dirty_check.cpp  test_discovery.cpp  test_instance.cpp  test_launchpad.cpp  test_pipeline.cpp  test_translator.cpp  test_triple_buffer.cpp
src/utils/: logger.h  lp_dirty_check.cpp  lp_dirty_check.h  lp_translator.cpp  lp_translator.h  lp_transport_factory.cpp  lp_transport_factory.h
